# llm-vocab-agent

./: LICENSE  README.md  pyproject.toml
src/llm_vocab_agent/: csv_utils.py  llms.py  main.py  tools.py
src/llm_vocab_agent/models/: __init__.py  adjektivs.py  adverbs.py  substantiv.py  verb.py  words.py
tests/: __init__.py  test_csv_utils.py  test_models.py
