[project]
name = "llm-vocab-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "VladMerk",email = "merkvladimir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "langchain-openai (>=0.3.18,<0.4.0)"
]

[tool.poetry]
packages = [{include = "llm_foreign_words", from = "src"}]


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
